--- a/index.html
+++ b/index.html
@@ -36,32 +36,35 @@
         <!--New York start-->
         <section class="card">
           <img class="img" src="img/new-york.jpeg">
-          <h3 class="nytitle"> New York </h3>
+          <h3 class="subtitle"> New York </h3>
           <p class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime voluptatum vel nemo iusto deserunt magni necessitatibus dolore praesentium non eligendi.</p>
           <a class ="link" href="https://www.google.co.uk/maps/place/New+York,+NY,+USA/@40.6976701,-74.2598742,10z/data=!3m1!4b1!4m5!3m4!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!8m2!3d40.7127753!4d-74.0059728">Google Maps</a>
+          </section>
           <!--New York end-->
         <!--Santorini start-->
         <section class="card">
           <img class="img" src="img/santorini.jpeg">
-          <h3 class="santotitle"> Santorini </h3>
+          <h3 class="subtitle"> Santorini </h3>
           <p class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit delectus voluptas sit repellat dolorum amet aut quod quasi, doloremque suscipit?</p>
           <a class ="link" href="https://www.google.co.uk/maps/place/Thera+847+00,+Greece/@36.4203432,25.4234157,15z/data=!3m1!4b1!4m5!3m4!1s0x1499cdce05e3bce9:0x9f4c192bbefa1db!8m2!3d36.4166485!4d25.432447">Google Maps</a>
+          </section>
           <!--Santorini end-->
         <!--Phuket start-->
         <section class="card">
           <img class="img" src="img/phuket.jpeg">
-          <h3 class="phukettitle"> Phuket </h3>
+          <h3 class="subtitle"> Phuket </h3>
           <p class= "text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime voluptatum vel nemo iusto deserunt magni necessitatibus dolore praesentium non eligendi.</p>
           <a class ="link" href="https://www.google.co.uk/maps/place/Phuket,+Thailand/@7.8833485,98.3744589,14z/data=!4m5!3m4!1s0x305031e2c462524f:0xe9ca9a85063dba21!8m2!3d7.9519331!4d98.3380884">Google Maps</a>
+          </section>
           <!--Phuket end-->
         <!-- Reykjavik start-->
         <section class="card">
           <img class="img" src="img/reykjavik.jpeg">
-          <h3 class="reykjaviktitle"> Reykjavik </h3>
+          <h3 class="subtitle"> Reykjavik </h3>
           <p class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime voluptatum vel nemo iusto deserunt magni necessitatibus dolore praesentium non eligendi.</p>
           <a class ="link" href="https://www.google.co.uk/maps/place/Reykjav%C3%ADk,+Iceland/@64.1335484,-21.9224818,12z/data=!3m1!4b1!4m5!3m4!1s0x48d674b9eedcedc3:0xec912ca230d26071!8m2!3d64.146582!4d-21.9426354">Google Maps</a>
           <!--Reykjavik end-->
-
+          
         </section>
 
       </section>
