first attempt media queries

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="body">
     <!-- Header start-->
     <header class="travel-planner">
       <h1 class="logo">Travel Planner</h1>
